# chanel-executor-experiment

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: bench.yml  rust.yml  testing.yml
benches/: benchmarks.rs
experiment-lib/: Cargo.toml
experiment-lib/src/: async_channel.rs  async_channel_driver.rs  async_executor_pool.rs  async_forwarder.rs  channel.rs  cmd_line_parser.rs  config.rs  crossbeam_async_driver.rs  crossbeam_driver.rs  crossbeam_std_async_daisy_chain.rs  d3_driver.rs  flume_async_executor_driver.rs  flume_async_std_driver.rs  flume_tokio_driver.rs  forwarder.rs  forwarder_driver.rs  futures_driver.rs  lib.rs  smol_driver.rs  support.rs  sync_forwarder.rs  tokio_driver.rs
experiment-lib/src/obsolete/: async_forwarder.rs  crossbeam_async_driver.rs  crossbeam_driver.rs  d3_driver.rs  executor_pool.rs  flume_async_std_driver.rs  futures_driver.rs  support.rs  sync_forwarder.rs
src/: main.rs
