[package]
name = "channel-executor-experiment"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BruceBrown/channel-executor-experiment"
homepage = "https://github.com/BruceBrown/d3"


[dependencies]
num_cpus = "1.13"
log = "0.4"
parking_lot = "0.11"
slab = "0.4.2"

crossbeam = "0.8"
d3 = "0.1"
tokio = { version = "0.3", features = ["full"] }
async-trait = "0.1.42"
flume = "0.9.2"
async-std = { version="1.7.0", features = ["attributes", "unstable"] }
futures = { version="0.3.8", features = ["thread-pool"] }
smol = "1.2.5"

experiment-lib = {version = "0.1", path = "./experiment-lib"}

[[bench]]
name = "benchmarks"
harness = false

[dev-dependencies]
# used in test and bench
criterion = "0.3"

