[package]
name = "experiment-lib"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"


[dependencies]

log = "0.4"
parking_lot = "0.11"
num_cpus = "1.13"
slab = "0.4.2"

crossbeam = "0.8"
d3 = "0.1"
tokio = { version = "0.3", features = ["full"] }
async-trait = "0.1.42"
flume = "0.9.2"
async-std = { version="1.7.0", features = ["attributes", "unstable"] }
futures = { version="0.3", features = ["thread-pool"] }
smol = "1.2.5"
