[package]
name = "experiment-lib"
version = "0.1.0"
authors = ["Bruce Brown <brown.bruce1207@gmail.com>"]
edition = "2018"


[dependencies]

log = "0.4"
parking_lot = "0.11"
num_cpus = "1.13"
slab = "0.4.2"
once_cell = "1.5.2"
async-trait = "0.1.42"
atomic_refcell = "0.1.6"

crossbeam = "0.8"
tokio = { version = "0.3", features = ["full"] }
flume = "0.9.2"
async-std = { version="1.7.0", features = ["attributes", "unstable"] }
futures = { version="0.3", features = ["thread-pool"] }
smol = "1.2.5"

# individual components
async-lock = "2.3.0"
async-channel = "1.5.1"
async-executor = "1.4.0"
async-task = "4.0.3"
async-io = "1.3.1"
concurrent-queue = "1.2.2"
futures-lite = "1.11.2"

spin_on = "0.1.1"
pin-utils = "0.1.0"


[patch.crates-io]
# Add patches here
#async-task = {version="4.0.3", path = "/Users/bruce/Projects/rust/async-task"}
#async-channel = {version="1.5.1", path = "/Users/bruce/Projects/rust/async-channel"}
#concurrent-queue = {version="1.2.2", path = "/Users/bruce/Projects/rust/concurrent-queue"}
#async-executor = {version="1.4.0", path = "/Users/bruce/Projects/rust/async-executor"}
#futures-lite = {version="1.11.2", path = "/Users/bruce/Projects/rust/futures-lite"}